--- a/index-links.html
+++ b/index-links.html
@@ -11,6 +11,34 @@
     <a href="#">Clique Aqui</a><br>
     <button><a href="#">Clique Aqui</a></button><br>
     <a class="portifolio" href="https:github.com/GenilsonCavalcante" target="_blank">Portifólio</a>
-    
+    <h1>More Examples</h1>
+    <p><b><a class="one" href="#" target="_blank">Este link muda de cor</a></b></p>
+    <p><b><a class="two" href="#" target="_blank">Este link muda a font-size</a></b></p>
+    <p><b><a class="three" href="#" target="_blank">este link muda o background-color</a></b></p>
+    <p><b><a class="four" href="#" target="_blank">este link muda font-family</a></b></p>
+    <p><b><a class="five" href="#" target="_blank">este link muda text-decoration</a></b></p>
+    <br>
+
+    <a class="button" href="https:github.com/GenilsonCavalcante" target="_blank">This is a link</a>
+
+    <p>Passa o mouse sobre as palavras para mudar o cursor:</p>
+    <span style="cursor:auto">auto</span><br>
+    <span style="cursor:crosshair">crosshair</span><br>
+    <span style="cursor:default">default</span><br>
+    <span style="cursor:e-resize">e-resize</span><br>
+    <span style="cursor:help">help</span><br>
+    <span style="cursor:move">move</span><br>
+    <span style="cursor:n-resize">n-resize</span><br>
+    <span style="cursor:ne-resize">ne-resize</span><br>
+    <span style="cursor:nw-resize">nw-resize</span><br>
+    <span style="cursor:pointer">pointer</span><br>
+    <span style="cursor:progress">progress</span><br>
+    <span style="cursor:s-resize">s-resize</span><br>
+    <span style="cursor:se-resize">se-resize</span><br>
+    <span style="cursor:sw-resize">sw-resize</span><br>
+    <span style="cursor:text">text</span><br>
+    <span style="cursor:w-resize">w-resize</span><br>
+    <span style="cursor:wait">wait</span><br>
+        
 </body>
 </html>
